Dependência com Servlet.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <!-- Para Servlet -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
   <build>
     <!-- Define o nome do pacote final que será gerado. -->
     <finalName>jee-lab</finalName>
