Atualização das configurações do Maven.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,14 @@
   <packaging>war</packaging>
 
   <properties>
+    <!-- Propriedades do projeto. -->
+    <tomcat.porta>9090</tomcat.porta>
+    <!-- Propriedades dos plugins do Maven. -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+    <!-- Para o Eclipse não reclamar que o "web.xml" está faltado. -->
+    <failOnMissingWebXml>false</failOnMissingWebXml>
   </properties>
 
   <dependencies>
@@ -25,30 +32,21 @@
 
   <build>
     <!-- Define o nome do pacote final que será gerado. -->
-    <finalName>jee-lab</finalName>
-  
+    <finalName>${project.artifactId}</finalName>
+
     <plugins>
-  
-      <!-- Para o Eclipse não reclamar que o "web.xml" está faltado. -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
-  
+
       <!-- Para usar o Tomcat durante o desenvolvimento. -->
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-          <port>9090</port>
+          <port>${tomcat.porta}</port>
         </configuration>
       </plugin>
-  
+
     </plugins>
   </build>
+
 </project>
